--- a/historia.html
+++ b/historia.html
@@ -98,7 +98,7 @@
             <div class="text-content" style="text-align: center; max-width: 800px; margin: 40px auto;">
                 <h2>Influencia</h2>
                 <p>El Surrealismo dejó una huella duradera en el arte, la literatura, el cine y la publicidad. Su espíritu transgresor sigue vivo en la cultura contemporánea, donde lo onírico y lo irracional se entrelazan con lo cotidiano.</p>
-                <img src="img/convergence_jackson_pollock.png" alt="Instalación artística contemporánea" style="width: 100%; max-width: 500px; margin-top: 20px; border-radius: 10px;">
+                <img src="img/convergence_jackson_pollock.jpg" alt="Convergence" style="width: 100%; max-width: 500px; margin-top: 20px; border-radius: 10px;">
                 <br>
                 <a href="influencia.html" class="more-info" style="margin-top: 20px;">Más</a>
             </div>
