--- a/actualidad.html
+++ b/actualidad.html
@@ -25,10 +25,54 @@
         </nav>
     </header>
 
-    <main class="container">
-        <section>
-            <h2>Actualidad</h2>
+    <main>
+        <section class="intro-actualidad">
+            <div class="container">
+                <h1>Lo Surreal Está Entre Nosotros</h1>
+                <p>El surrealismo no quedó atrapado en los lienzos ni en los manifiestos del siglo XX. Hoy sigue vivo, transformándose en publicidad, moda, cine, memes y cultura digital. Su esencia —lo absurdo, lo onírico, lo inesperado— continúa inspirando nuevas formas de expresión que invaden nuestra vida cotidiana.</p>
+            </div>
         </section>
+
+        <div class="container">
+            <section class="content-block">
+                <div class="text-content">
+                    <h2>Cuando la Publicidad Sueña</h2>
+                    <p>Marcas de todo el mundo utilizan el lenguaje onírico para captar la atención del consumidor. Un ejemplo icónico es el logo de Chupa Chups, diseñado por el propio Salvador Dalí en 1969, una prueba de que lo surreal vende.</p>
+                </div>
+                <div class="image-content rectangular-image">
+                    <img src="img/chupa_chups.jpg" alt="Publicidad Surrealista" class="square-image">
+                </div>
+            </section>
+
+            <section class="content-block light-bg">
+                <div class="image-content">
+                    <img src="img/vestido_langosta.jpg" alt="Moda Surrealista" class="square-image">
+                </div>
+                <div class="text-content">
+                    <h2>Pasarelas de Otro Mundo</h2>
+                    <p>La alta costura y el surrealismo tuvieron un romance icónico en la colaboración entre Salvador Dalí y la diseñadora Elsa Schiaparelli. Juntos crearon piezas como el 'Vestido Langosta', transformando la moda en un lienzo para lo imposible.</p>
+                </div>
+            </section>
+
+            <section class="content-block">
+                <div class="text-content">
+                    <h2> Escenas Surrealistas</h2>
+                    <p>El cine contemporáneo sigue bebiendo de las fuentes del surrealismo. Películas como 'Strawberry Mansion' (2021) exploran la lógica de los sueños y la comercialización de lo inconsciente con una estética que renueva el espíritu del movimiento.</p>
+                </div>
+                <div class="image-content">
+                    <img src="img/strawberry_mansion.jpg" alt="Cine Surrealista" class="rounded-image">
+                </div>
+            </section>
+            <section class="content-block light-bg">
+                <div class="image-content">
+                    <img src="img/meme.jpg" alt="Meme Surrealista" class="uncropped-image">
+                </div>
+                <div class="text-content">
+                    <h2>Surrealismo Digital</h2>
+                    <p>El humor absurdo y las imágenes sin aparente lógica de los memes son, en muchos casos, una forma de surrealismo digital. La cultura de internet ha adoptado la yuxtaposición inesperada y lo irracional como un lenguaje propio.</p>
+                </div>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
