--- a/artistas.html
+++ b/artistas.html
@@ -102,7 +102,7 @@
             <h2>Entre Bastidores</h2>
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="img/andre_breton.jpg" alt="André Breton">
+                    <img src="img/breton3.jpg" alt="André Breton">
                     <div class="overlay"><span>André Breton</span></div>
                 </div>
                 <div class="grid-item">
