--- a/historia.html
+++ b/historia.html
@@ -42,7 +42,7 @@
         </div>
 
         <section>
-            <div class="text-content" style="text-align: center; max-width: 800px; margin: 40px auto;">
+            <div class="text-content history-text-block">
                 <h2>Sueños, Inconsciente y Freud</h2>
                 <p>La influencia de Sigmund Freud y su obra <strong>"La interpretación de los sueños"</strong> fue la piedra angular del pensamiento surrealista. Los artistas y escritores del movimiento quedaron fascinados por la idea de que el <strong>inconsciente</strong> era un depósito de pensamientos, miedos y <strong>deseos reprimidos</strong> que dictaban el comportamiento humano sin que la persona fuera consciente de ello.</p> <p>Los surrealistas adoptaron el subconsciente como su principal terreno creativo, un universo fértil y desconocido donde lo absurdo, lo ilógico y lo censurado por la razón podían manifestarse en su forma más pura. Veían los sueños no como simples fantasías, sino como <strong>verdades artísticas</strong> y psicológicas profundas, una puerta de entrada a la esencia misma del ser.</p>
             </div>
@@ -56,8 +56,8 @@
                 </div>
                 <div class="image-content">
                     <div class="dual-image-container">
-                        <img src="img/andre_breton.jpg" alt="André Breton" class="square-image">
-                        <img src="img/andre_breton2.jpg" alt="André Breton" class="square-image">
+                        <img src="img/andre_breton5.jpg" alt="André Breton" class="square-image">
+                        <img src="img/breton4.jpg" alt="André Breton" class="square-image">
                     </div>
                 </div>
             </div>
@@ -95,12 +95,12 @@
         </section>
 
         <section class="light-bg">
-            <div class="text-content" style="text-align: center; max-width: 800px; margin: 40px auto;">
+            <div class="text-content history-text-block">
                 <h2>Influencia</h2>
                 <p>El Surrealismo dejó una huella duradera en el arte, la literatura, el cine y la publicidad. Su espíritu transgresor sigue vivo en la cultura contemporánea, donde lo onírico y lo irracional se entrelazan con lo cotidiano.</p>
-                <img src="img/convergence_jackson_pollock.jpg" alt="Convergence" style="width: 100%; max-width: 500px; margin-top: 20px; border-radius: 10px;">
+                <img src="img/cisnes_reflejando_elefantes.jpg" alt="Obra Cisnes Reflejando Elefantes" class="history-influence-image">
                 <br>
-                <a href="influencia.html" class="more-info" style="margin-top: 20px;">Más</a>
+                <a href="influencia.html" class="more-info history-more-info-btn">Más</a>
             </div>
         </section>
 
