--- a/obras.html
+++ b/obras.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
- <header class="header">
+    <header class="header">
         <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
             <img src="img/lupa.svg" alt="Búsqueda" class="search-icon">
@@ -31,20 +31,16 @@
             <h2 class="section-title">Obras Icónicas</h2>
             <div class="obras-grid">
                 <div class="obra-item">
-                    <img src="img/la_persistencia_de_la_memoria.jpg" alt="La persistencia de la memoria">
-                    <p class="obra-descripcion">"La persistencia de la memoria" (1931) de Salvador Dalí, una de las obras más célebres del surrealismo.</p>
+                    <img src="img/la_persistencia_de_la_memoria.jpg" alt="La persistencia de la memoria" class="gallery-image" data-title="La persistencia de la memoria" data-description="'La persistencia de la memoria' (1931) de Salvador Dalí, explora la relatividad del tiempo. Al mostrar relojes 'derretidos', Dalí visualiza cómo el tiempo se vuelve elástico y distorsionado en el subconsciente y en los sueños, contrastando con el tiempo rígido y mecánico de la realidad.">
                 </div>
                 <div class="obra-item">
-                    <img src="img/el_hijo_del_hombre.jpg" alt="El hijo del hombre">
-                    <p class="obra-descripcion">"El hijo del hombre" (1964) de René Magritte, que explora la ocultación y lo visible.</p>
+                    <img src="img/el_hijo_del_hombre.jpg" alt="El hijo del hombre" class="gallery-image" data-title="El hijo del hombre" data-description="'El hijo del hombre' (1964) de René Magritte, juega con la idea de lo visible y lo oculto, cuestionando lo que se muestra y lo que se esconde. Simboliza la tendencia humana a querer ver lo que está oculto detrás de la apariencia de las cosas.">
                 </div>
                 <div class="obra-item">
-                    <img src="img/el_elefante_de_celebes.jpg" alt="El elefante de Célebes">
-                    <p class="obra-descripcion">"El elefante de Célebes" (1921) de Max Ernst, una obra que combina collage y pintura.</p>
+                    <img src="img/el_elefante_de_celebes.jpg" alt="El elefante de Célebes" class="gallery-image" data-title="El elefante de Célebes" data-description="'El elefante de Célebes' (1921) de Max Ernst, representa un ser híbrido, entre lo orgánico y lo mecánico, que muchos interpretan como una metáfora de los horrores y la monstruosidad de la guerra. La obra evoca lo irracional y el mundo de pesadilla.">
                 </div>
                 <div class="obra-item">
-                    <img src="img/la_traición_de_las_imágenes.jpg" alt="La traición de las imágenes">
-                    <p class="obra-descripcion">"La traición de las imágenes" (1929) de René Magritte, famosa por su inscripción "Ceci n'est pas une pipe."</p>
+                    <img src="img/la_traición_de_las_imágenes.jpg" alt="La traición de las imágenes" class="gallery-image" data-title="La traición de las imágenes" data-description="'La traición de las imágenes' (1929) de René Magritte,  juega con la lógica al señalar que lo que vemos es solo una imagen de una pipa, no el objeto real en sí mismo que se puede fumar. Es un profundo cuestionamiento sobre el lenguaje, la representación y la naturaleza del arte.">
                 </div>
             </div>
         </section>
@@ -55,42 +51,58 @@
                 <div class="slider-track">
                     <!-- Slide 1 -->
                     <div class="slide">
-                        <img src="img/telefono_langosta.jpg" alt="Teléfono Langosta de Dalí">
+                        <img src="img/telefono_langosta.jpg" alt="Obra Teléfono Langosta de Dalí">
                         <div class="slide-info">
                             <h3 class="slide-title">Teléfono Langosta - Salvador Dalí</h3>
-                            <p class="slide-description">Una de las creaciones más emblemáticas de Dalí, este teléfono combina un objeto cotidiano con una langosta, desafiando la lógica y la función de manera puramente surrealista.</p>
+                            <p class="slide-description">Este objeto de 1936 es una de las creaciones más emblemáticas de Dalí, combinando un objeto cotidiano con una langosta para desafiar la lógica de forma puramente surrealista.</p>
                         </div>
                     </div>
                     <!-- Slide 2 -->
                     <div class="slide">
-                        <img src="img/el_carnaval_del_arlequín.jpg" alt="El carnaval del arlequín de Miró">
+                        <img src="img/el_carnaval_del_arlequín.jpg" alt="Obra El carnaval del arlequín de Miró">
                         <div class="slide-info">
                             <h3 class="slide-title">El carnaval del arlequín - Joan Miró</h3>
-                            <p class="slide-description">Esta obra de Joan Miró es una representación caótica y vibrante de una escena festiva, llena de figuras biomórficas y colores intensos que reflejan el subconsciente del artista.</p>
+                            <p class="slide-description">Esta obra de 1924 es una representación caótica y vibrante del subconsciente del artista, llena de figuras biomórficas y colores intensos que reflejan una alucinación.</p>
                         </div>
                     </div>
                     <!-- Slide 3 -->
                     <div class="slide">
-                        <img src="img/mi_enfermera.jpg" alt="Mi enfermera de Oppenheim">
+                        <img src="img/mi_enfermera.jpg" alt="Obra Mi enfermera de Oppenheim">
                         <div class="slide-info">
                             <h3 class="slide-title">Mi enfermera - Meret Oppenheim</h3>
-                            <p class="slide-description">Meret Oppenheim transforma una taza, un plato y una cuchara en un objeto inquietante y táctil al cubrirlos de piel. La obra juega con la sensualidad y la repulsión.</p>
+                            <p class="slide-description">Oppenheim presenta en 1936 un par de zapatos de tacón blancos, atados y servidos en una bandeja como si fueran un plato de comida, criticando la objetivación del cuerpo femenino.</p>
                         </div>
                     </div>
                     <!-- Slide 4 -->
                     <div class="slide">
-                        <img src="img/la_lampara_filosofica.jpg" alt="La Lampara Filosofica">
+                        <img src="img/la_lampara_filosofica.jpg" alt="Obra La Lampara Filosofica">
                         <div class="slide-info">
                             <h3 class="slide-title">La Lampara Filosofica - René Magritte</h3>
-                            <p class="slide-description">Max Ernst utilizó la técnica del 'frottage' para crear paisajes fantásticos y post-apocalípticos. Esta obra evoca una sensación de desolación y renacimiento.</p>
+                            <p class="slide-description">En esta pintura de 1936, Magritte retrata a un hombre fumando cuya cabeza es también una vela encendida, fusionando al pensador con la fuente de su propia iluminación de una manera ilógica.</p>
                         </div>
                     </div>
                     <!-- Slide 5 -->
                     <div class="slide">
-                        <img src="img/emak_bakia.jpg" alt="Emak Bakia de Man Ray">
+                        <img src="img/el_gran_masturbador.jpg" alt="Obra El Gran Masturbador">
                         <div class="slide-info">
-                            <h3 class="slide-title">Emak Bakia - Man Ray</h3>
-                            <p class="slide-description">Filmada por Man Ray, esta película experimental es un ejemplo del cine surrealista, utilizando técnicas visuales innovadoras para crear una experiencia onírica y sin narrativa convencional.</p>
+                            <h3 class="slide-title">El gran masturbador - Salvador Dalí</h3>
+                            <p class="slide-description">Filmada en 1926, esta película experimental es un ejemplo del cine surrealista, utilizando técnicas visuales innovadoras para crear una experiencia onírica sin narrativa convencional.</p>
+                        </div>
+                    </div>
+                     <!-- Slide 6 -->
+                    <div class="slide">
+                        <img src="img/sueño_causado.jpg" alt="Obra Sueño causado por el vuelo de una abeja...">
+                        <div class="slide-info">
+                            <h3 class="slide-title">Sueño causado por el vuelo de una abeja alrededor de una granada un segundo antes de despertar</h3>
+                            <p class="slide-description">Obra de Salvador Dalí (1944) que ilustra una cadena de asociaciones oníricas a partir de un estímulo externo, el zumbido de una abeja. Representa el interés de Dalí por el psicoanálisis de Freud.</p>
+                        </div>
+                    </div>
+                     <!-- Slide 7 -->
+                    <div class="slide">
+                        <img src="img/los_amantes.jpg" alt="Obra Los Amantes">
+                        <div class="slide-info">
+                            <h3 class="slide-title">Los Amantes - René Magritte</h3>
+                            <p class="slide-description">En esta icónica obra de 1928, Magritte presenta a dos amantes besándose con las cabezas cubiertas por una tela, transformando un acto de pasión en una imagen de aislamiento y frustración. La obra cuestiona la verdadera naturaleza del conocimiento y la intimidad en las relaciones humanas.</p>
                         </div>
                     </div>
                 </div>
@@ -104,35 +116,23 @@
             <div class="destacadas-grid">
                 <div class="destacadas-row">
                     <div class="obra-item">
-                        <img src="img/antes_del_nacimiento.jpg" alt="Antes del nacimiento">
+                        <img src="img/antes_del_nacimiento.jpg" alt="Obra Antes del nacimiento">
                         <p class="obra-descripcion">Una obra que explora los misterios del origen y la existencia antes de la vida consciente.</p>
                     </div>
                     <div class="obra-item">
-                        <img src="img/convergence_jackson_pollock.jpg" alt="Convergence">
-                        <p class="obra-descripcion">Aunque más ligado al expresionismo abstracto, la obra de Pollock tiene influencias surrealistas en su automatismo.</p>
-                    </div>
-                </div>
-                <div class="destacadas-row">
-                    <div class="obra-item">
-                        <img src="img/parque_güell.jpg" alt="Parque Güell">
-                        <p class="obra-descripcion">La arquitectura de Gaudí, con sus formas orgánicas y oníricas, es una clara precursora del surrealismo.</p>
-                    </div>
-                    <div class="obra-item">
-                        <img src="img/casa_batlo.jpg" alt="Casa Batlló">
-                        <p class="obra-descripcion">Otro ejemplo de la genialidad de Gaudí, donde la fantasía se convierte en un edificio habitable.</p>
+                        <img src="img/el_nacimiento_del_mundo.jpg" alt="Obra El Nacimiento Del Mundo">
+                        <p class="obra-descripcion">Joan Miró (1925) utiliza formas abstractas y colores primarios para representar el caos primigenio del universo.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer class="site-footer">
-        <div class="footer-container">
-            <p class="dali-quote">“La diferencia entre un loco y yo es que yo no estoy loco.”</p>
-            <div class="contact-info">
-                <img src="img/sobre.svg" alt="Email">
-                <p>universo.onirico@gmail.com</p>
-            </div>
+    <footer class="footer">
+        <p class="quote">"La diferencia entre un loco y yo es que yo no estoy loco." - Dalí</p>
+        <div class="contact-info">
+            <img src="img/sobre.svg" alt="Contacto">
+            <p>universo.onirico@gmail.com</p>
         </div>
     </footer>
 
