--- a/historia.html
+++ b/historia.html
@@ -98,7 +98,7 @@
             <div class="text-content history-text-block">
                 <h2>Influencia</h2>
                 <p>El Surrealismo dejó una huella duradera en el arte, la literatura, el cine y la publicidad. Su espíritu transgresor sigue vivo en la cultura contemporánea, donde lo onírico y lo irracional se entrelazan con lo cotidiano.</p>
-                <img src="img/cisnes_reflejando_elefantes.jpg" alt="Obra Cisnes Reflejando Elefantes" class="history-influence-image">
+                <a href="influencia.html"><img src="img/cisnes_reflejando_elefantes.jpg" alt="Obra Cisnes Reflejando Elefantes" class="history-influence-image"></a>
                 <br>
                 <a href="influencia.html" class="more-info history-more-info-btn">Más</a>
             </div>
