--- a/artistas.html
+++ b/artistas.html
@@ -11,9 +11,15 @@
     <header class="header">
         <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
-            <img src="img/lupa.svg" alt="Búsqueda" class="search-icon">
+           <div class="search-container">
+                <form action="resultados_buscar.php" method="post">
+              <div class="search-bar">
+                    <input type="search" name="buscar" placeholder="Buscar..." />
+                </div>
+              </form>
+            </div>
         </div>
-        <nav class="navigation">
+        <nav class="navigation"> 
             <ul>
                 <li><a href="historia.html">Historia</a></li>
                 <li><a href="artistas.html" class="active">Artistas</a></li>
@@ -29,7 +35,7 @@
         <!-- Breton: Texto Izquierda, Imagen Derecha -->
         <section class="artist-section light-bg">
             <div class="text-content">
-                <h2>Breton</h2>
+                <h2> André Breton</h2>
                 <p>André Breton (1896–1966) fue un escritor, poeta y teórico francés, universalmente reconocido como el fundador y principal exponente del surrealismo. Tras romper con el dadaísmo, buscó una nueva forma de expresión que explorara las profundidades de la mente y liberara la creatividad de las ataduras de la razón.</p>
                 <p>En su Manifiesto Surrealista de 1924, lo definió como un "automatismo psíquico puro", a través del cual se intenta expresar el funcionamiento real del pensamiento. Su obra literaria, que incluye poemas, novelas y ensayos, explora temas como la locura, el amor y la revolución, consolidando su liderazgo estético y político dentro del movimiento.</p>
             </div>
@@ -44,7 +50,7 @@
                 <img src="img/dali.jpg" alt="Salvador Dalí">
             </div>
             <div class="text-content">
-                <h2>Dalí</h2>
+                <h2>Salvador Dalí</h2>
                 <p>Salvador Dalí (1904–1989) es, sin duda, la figura más icónica y excéntrica del surrealismo. Este pintor español llevó el movimiento a la fama mundial gracias a su habilidad para crear imágenes que eran a la vez realistas y fantásticas, aplicando una técnica hiperrealista para plasmar sus "fotografías de sueños pintadas a mano".</p>
                 <p>A través de su método "paranoico-crítico", exploraba obsesiones y deseos ocultos, creando obras tan famosas como <i>La persistencia de la memoria</i> (1931) y <i>Los elefantes</i> (1948). Fue un artista innovador que trabajó en pintura, cine, escultura y diseño, y sus obras han tenido un impacto tan significativo en la cultura popular que siguen siendo ampliamente admiradas y estudiadas en la actualidad.</p>
             </div>
@@ -53,7 +59,7 @@
         <!-- Gaudí: Texto Izquierda, Imagen Derecha -->
         <section class="artist-section light-bg">
             <div class="text-content">
-                <h2>Gaudí</h2>
+                <h2>Antoni Gaudí</h2>
                 <p>Antoni Gaudí (1852–1926), el genio de la arquitectura modernista catalana, es una figura fundamental para entender la sensibilidad surrealista, aunque cronológicamente no formara parte del movimiento. Los surrealistas vieron en su obra una premonición de sus propios ideales: la liberación de la forma, la inspiración en la naturaleza y la creación de espacios que parecen salidos de un sueño.</p>
                 <p>Edificios como la Casa Batlló, con sus formas óseas y su fachada ondulante, o el fantástico Parque Güell, desafían la lógica constructiva y apelan directamente al subconsciente. Gaudí demostró que la arquitectura podía ser un vehículo para la fantasía, abriendo un camino que los surrealistas explorarían en otras disciplinas.</p>
             </div>
@@ -68,7 +74,7 @@
                 <img src="img/rene_magritte.jpg" alt="René Magritte">
             </div>
             <div class="text-content">
-                <h2>Magritte</h2>
+                <h2>RenéMagritte</h2>
                 <p>René Magritte (1898-1967) fue un pintor surrealista belga célebre por sus imágenes ingeniosas y provocadoras. A diferencia de otros surrealistas, Magritte utilizaba un estilo realista para representar objetos cotidianos en contextos inusuales, desafiando la percepción de la realidad y la representación.</p>
                 <p>Obras como <i>La traición de las imágenes</i> ("Esto no es una pipa") y <i>El hijo del hombre</i> cuestionan la naturaleza de lo visible y lo oculto, convirtiéndolo en una de las voces más filosóficas del movimiento.</p>
             </div>
@@ -77,7 +83,7 @@
         <!-- Miró: Texto Izquierda, Imagen Derecha -->
         <section class="artist-section light-bg">
             <div class="text-content">
-                <h2>Miró</h2>
+                <h2>Joan Miró</h2>
                 <p>Joan Miró (1893-1983) fue un pintor, escultor y ceramista español, pionero del surrealismo. Aunque se asoció con el grupo de Breton, desarrolló un lenguaje visual único y muy personal, abrazando el automatismo psíquico para liberar su subconsciente.</p>
                 <p>Su obra se caracteriza por un estilo abstracto con símbolos infantiles, estrellas y formas biomórficas. Con obras como <i>El carnaval del arlequín</i>, buscaba "asesinar" la pintura convencional para crear una nueva forma de expresión poética y visual.</p>
             </div>
@@ -92,7 +98,7 @@
                 <img src="img/luis_buñuel.jpg" alt="Luis Buñuel">
             </div>
             <div class="text-content">
-                <h2>Buñuel</h2>
+                <h2>Luis Buñuel</h2>
                 <p>Luis Buñuel (1900-1983) fue un director de cine español, considerado el padre del cine surrealista. Su colaboración con Salvador Dalí dio como fruto <i>Un perro andaluz</i>, un cortometraje que sacudió al mundo del arte con sus imágenes impactantes y su lógica onírica.</p>
                 <p>A lo largo de su carrera, Buñuel utilizó el cine para explorar el subconsciente y realizar una profunda crítica a la burguesía, la religión y las convenciones sociales. Películas como <i>La edad de oro</i> y <i>El discreto encanto de la burguesía</i> son pilares del cine de vanguardia.</p>
             </div>
