--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="header-top">
+       <header class="header">
+       <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
-            <img src="img/lupa.svg" alt="Búsqueda" class="search-icon">
+           <div class="search-container">
+                <form action="resultados_buscar.php" method="post">
+              <div class="search-bar">
+                    <input type="search" name="buscar" placeholder="Buscar..." />
+                </div>
+              </form>
+            </div>
+        </div>
         </div>
         <nav class="navigation">
             <ul>
