--- a/influencia.html
+++ b/influencia.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surrealismo | Influencia</title>
+    <title>Universo Onírico - Historia del Surrealismo</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header class="header">
        <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
            <div class="search-container">
-                <form action="resultados_buscar.php" method="post">
-              <div class="search-bar">
-                    <input type="search" name="buscar" placeholder="Buscar..." />
-                </div>
-              </form>
+                <form action="resultados_buscar.php" method="post" class="search-form">
+                    <input type="search" name="buscar" placeholder="Buscar..." class="search-input"/>
+                    <button type="submit" class="search-button">
+                        <i class="material-icons">search</i>
+                    </button>
+                </form>
             </div>
         </div>
         <nav class="navigation">
