--- a/obras.html
+++ b/obras.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obras - Universo Onírico</title>
+    <title>Universo Onírico - Historia del Surrealismo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="header-top">
+       <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
            <div class="search-container">
-                <form action="resultados_buscar.php" method="post">
-              <div class="search-bar">
-                    <input type="search" name="buscar" placeholder="Buscar..." />
-                </div>
-              </form>
+                <form action="resultados_buscar.php" method="post" class="search-form">
+                    <input type="search" name="buscar" placeholder="Buscar..." class="search-input"/>
+                    <button type="submit" class="search-button">
+                        <i class="material-icons">search</i>
+                    </button>
+                </form>
             </div>
         </div>
         <nav class="navigation">
             <ul>
                 <li><a href="historia.html">Historia</a></li>
                 <li><a href="artistas.html">Artistas</a></li>
-                <li><a href="obras.html" class="active">Obras</a></li>
+                <li><a href="obras.html" id="indicador">Obras</a></li>
                 <li><a href="influencia.html">Influencia</a></li>
                 <li><a href="actualidad.html">Actualidad</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
