--- a/usuario.html
+++ b/usuario.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Universo Onírico</title>
+    <title>Universo Onírico - Usuario</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header class="header">
         <div class="header-top">
             <a href="index.html"><h1 class="logo">Universo Onírico</h1></a>
-           <div class="search-container">
+            <div class="search-container">
                 <form action="resultados_buscar.php" method="post" class="search-form">
                     <input type="search" name="buscar" placeholder="Buscar..." class="search-input"/>
                     <button type="submit" class="search-button">
                         <i class="material-icons">search</i>
                     </button>
                 </form>
+                <a href="usuario.html" class="user-icon">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </a>
             </div>
         </div>
         <nav class="navigation">
@@ -28,44 +34,25 @@
                 <li><a href="obras.html">Obras</a></li>
                 <li><a href="influencia.html">Influencia</a></li>
                 <li><a href="actualidad.html">Actualidad</a></li>
-                <li><a href="contacto.html"id="indicador">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="intro-gallery">
-        <img src="img/europa_despues_de_la_lluvia.jpg" alt="Europa despues de la lluvia">
-    </section>
-
     <main class="container">
-        <section class="contact-section">
-            <div class="contact-form">
-                <h2>¿Querés saber más sobre surrealismo? ¡Escribinos!</h2>
-                <form action="enviar.php" method="post">
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" id="nombre" name="nombre" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="consulta">Mensaje</label>
-                        <textarea id="consulta" name="comentario" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Enviar</button>
-                </form>
-            </div>
-        </section>
-
-        <section class="contact-images">
-            <div class="img-container rectangular-img">
-                <img src="img/el_gran_masturbador.jpg" alt="El gran masturbador">
-            </div>
-            <div class="img-container square-img">
-                <img src="img/casa_batlo.jpg" alt="Dalí">
-            </div>
+        <section class="login-section">
+            <h2>Iniciar Sesión</h2>
+            <form action="enviar.php" method="post" class="login-form">
+                <div class="form-group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn">Ingresar</button>
+            </form>
         </section>
     </main>
 
