--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
        <header class="header">
@@ -19,6 +20,11 @@
                         <i class="material-icons">search</i>
                     </button>
                 </form>
+                <a href="usuario.html" class="user-icon">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </a>
             </div>
         </div>
         </div>
